--- a/src/index.css
+++ b/src/index.css
@@ -7,5 +7,5 @@ body {
   font-family: Arial, Helvetica, sans-serif;
   color: white;
   padding: 40px 20px; 
-        background: linear-gradient(135deg, #fff2e6, #ffd3a6)
+        background:  #ffd3a6
 }
